# wlss-backend

./: .coveragerc  .flake8  .mypy.ini  .pylintrc  .ruff.toml  README.md  alembic.ini  pyproject.toml  pytest.ini  whitelist.txt
.github/actions/docker/update-buildx-cache/: action.yml
.github/actions/docker/use-buildx-cache/: action.yml
.github/workflows/: cleanup.yml  db.yml  deploy-to-test.yml  lint.yml  qa.yml  test.yml
api/: client.py
api/account/: client.py  dtos.py  fields.py
api/auth/: client.py  dtos.py
api/file/: client.py  dtos.py  enums.py  fields.py
api/friendship/: client.py  dtos.py  enums.py
api/health/: client.py  dtos.py
api/profile/: client.py  dtos.py
api/shared/: fields.py  schemas.py
api/wish/: client.py  dtos.py
envs/ci/: .env  docker-compose.yml
envs/ci/db/: Dockerfile  docker-compose.yml  env.sh
envs/ci/lint/: .env  Dockerfile  docker-compose.yml
envs/ci/test/: .env  Dockerfile  docker-compose.yml  env.sh
envs/dev/scripts/git/: iam.sh
envs/local/dev/: .env  docker-compose.yml  env.sh
envs/local/test/: .env  docker-compose.yml  env.sh
envs/qa/: Dockerfile.dockerignore  docker-compose.yml
envs/qa/deploy/: Dockerfile  docker-compose.yml  env.sh
envs/qa/deploy/nginx/: nginx.conf
envs/qa/nginx/: nginx.conf
envs/test/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml  env.sh
migrations/: env.py
migrations/versions/: 2023_05_08_2306-746039e79eb3_add_entity_table.py  2023_05_13_0036-a6c565d21b95_add_bucket_and_key_to_entity.py  2023_06_15_1158-8f2f6221d1de_remove_poc_models.py  2023_09_23_1501-5c530dfcd1ac_add_instance_and_floating_ip_tables.py  2023_11_05_1332-d7454b0101c0_add_account_profile_and_password_hash_tables.py  2023_11_19_2120-55f1606e7086_change_avatar_to_avatar_id.py  2023_11_24_1315-c2530d2a11e4_add_file_table_and_create_foreign_key_for_avatar_id.py  2024_01_23_1418-a8b78318faef_add_length_constraints_to_existing_string_columns.py  2024_01_24_1315-c2530d2a11e4_add_file_table_and_create_foreign_key_for_avatar_id.py  2024_02_16_2133-21c255263879_add_session_table.py  2024_02_18_1044-1b645cd5f92c_create_file_table.py  2024_02_18_2113-7e4e5342d0cb_add_foreign_key_for_profile_avatar_id.py  2024_02_20_1611-8b9892ad80c5_add_friendship_table.py  2024_02_20_1649-bbcbf8bbffd1_add_friendship_request_table.py  2024_02_20_2026-7d85d9d7e37d_create_wish_table.py  2024_02_21_1740-938709fd0268_create_wish_booking_table.py  2024_02_26_1838-5b979f00b2de_add_missing_created_at_updated_at.py  2024_02_26_1901-69d6fbe5d8cd_add_unique_together_for_account_id_and_wish_id.py  2024_03_21_1845-437ed1bfb38d_add_constraints_to_friendship_and_friendship_request.py  2024_03_21_1934-37f4deae3e29_add_created_at_to_profile.py
src/: __init__.py  app.py  config.py  ping.py  routes.py  session.py
src/account/: __init__.py  columns.py  controllers.py  dtos.py  exceptions.py  fields.py  models.py  routes.py  schemas.py
src/auth/: __init__.py  controllers.py  dependencies.py  dtos.py  exceptions.py  fields.py  models.py  routes.py  schemas.py  security.py  swagger.py
src/entity/: __init__.py  models.py  routes.py  schemas.py
src/file/: __init__.py  columns.py  constants.py  controllers.py  dependencies.py  dtos.py  enums.py  exceptions.py  fields.py  models.py  routes.py  schemas.py
src/friendship/: __init__.py  controllers.py  dtos.py  enums.py  exceptions.py  models.py  routes.py  schemas.py
src/health/: __init__.py  enums.py  routes.py  schemas.py
src/ips/: models.py
src/profile/: __init__.py  columns.py  controllers.py  dtos.py  fields.py  models.py  routes.py  schemas.py
src/shared/: __init__.py  columns.py  database.py  datetime.py  enum.py  environment.py  exceptions.py  fields.py  minio.py  schemas.py  swagger.py  types.py
src/wish/: __init__.py  columns.py  controllers.py  dtos.py  exceptions.py  fields.py  models.py  routes.py  schemas.py
tests/: __init__.py  conftest.py  test_ping.py  test_session_routes.py
tests/test_account/: conftest.py  test_create_account.py  test_get_account.py  test_get_account_id.py  test_get_accounts.py  test_match_account_email.py  test_match_account_login.py
tests/test_account/create_account/with_same_email/: test_exception.py
tests/test_account/create_account/with_same_login/: test_exception.py
tests/test_account/create_account/works_correctly/: test_db.py  test_response.py
tests/test_auth/: conftest.py  test_create_account.py  test_create_session.py  test_delete_all_sessions.py  test_delete_session.py  test_refresh_tokens.py
tests/test_entity/: conftest.py  test_create_entity.py  test_get_entity.py
tests/test_file/: conftest.py  test_create_file.py  test_get_file.py
tests/test_friendship/: conftest.py  test_accept_friendship_request.py  test_cancel_friendship_request.py  test_create_friendship_request.py  test_delete_friendships.py  test_get_account_friendships.py  test_get_friends.py  test_get_friendship_requests.py  test_reject_friendship_request.py
tests/test_health/: test_get_health.py
tests/test_ips/: conftest.py  test_query.py
tests/test_profile/: conftest.py  test_get_profile.py  test_get_profiles.py  test_search_profiles.py  test_update_profile.py
tests/test_wish/: conftest.py  test_create_wish.py  test_create_wish_booking.py  test_delete_wish.py  test_delete_wish_booking.py  test_get_account_wishes.py  test_get_wish_bookings.py  test_update_wish.py
tests/utils/: __init__.py  bcrypt.py  database.py  dirty_equals.py
tests/utils/mocks/: __init__.py  models.py
(+26 files in other folders)
